08-ELB-Application-LoadBalancers/08-02-ALB-Ingress-Basics/01-kube-manifests-default-backend/02-ALB-Ingress-Basic.yml
# Annotations Reference: https://kubernetes-sigs.github.io/aws-load-balancer-controller/latest/guide/ingress/annotations/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginxapp1
  labels:
    app: app1-nginx
  annotations:
    # Load Balancer Name
    alb.ingress.kubernetes.io/load-balancer-name: app1ingress
    #kubernetes.io/ingress.class: "alb" (ANCIENNE NOTATION DE DECLARATION DE CLASS INGRESS - Il est recommandé d'utiliser IngressClassName) # Additional Notes: https://kubernetes-sigs.github.io/aws-load-balancer-controller/v2.3/guide/ingress/ingress_class/#deprecated-kubernetesioingressclass-annotation
    # Ingress Core Settings
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Health Check Settings
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP # Protocole utilisé pour vérifier l'état de santé des instances (HTTP ou HTTPS).
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port # Le port utilisé pour les vérifications de santé. "traffic-port" signifie qu'il utilise le même port que celui du trafic principal.
    alb.ingress.kubernetes.io/healthcheck-path: /app1/index.html # Le chemin spécifique à vérifier lors des vérifications de santé, souvent une page simple de test.
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15' # Intervalle de temps (en secondes) entre deux vérifications de santé consécutives.
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5' # Temps limite (en secondes) pour chaque vérification de santé. Après ce délai, une vérification est considérée comme échouée.
    alb.ingress.kubernetes.io/success-codes: '200' # Codes de retour HTTP considérés comme un succès pour la vérification de santé. Ici, 200 signifie "OK".
    alb.ingress.kubernetes.io/healthy-threshold-count: '2' # Nombre de vérifications de santé réussies requises pour qu'une instance soit considérée comme "en bonne santé".
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2' # Nombre de vérifications de santé échouées requises pour qu'une instance soit considérée comme "en mauvaise santé".
spec:
  ingressClassName: my-aws-ingress-class # Ingress Class (peut être omis car c'est la classe par défaut - is-default-class:true)
  defaultBackend: # Déclaration d'un backend par defaut
    service:
      name: app1-nginx-nodeport-service # Déclaré dans 01-Nginx-App1-Deployment-and-NodePortService.yml
      port:
        number: 80                  
      
# 1. If  "spec.ingressClassName: my-aws-ingress-class" not specified, will reference default ingress class on this kubernetes cluster
# 2. Default Ingress class is nothing but for which ingress class we have the annotation `ingressclass.kubernetes.io/is-default-class: "true"`
